# mrtree-rs

./: Cargo.toml  README.md
.github/workflows/: build.yaml
src/: cli.rs  consensus.rs  error.rs  io.rs  lib.rs  logging.rs  main.rs  model.rs  preprocess.rs  reconcile.rs  summary.rs  weights.rs
src/algorithm/: consensus.rs  mod.rs  paths.rs  reconcile.rs  tree.rs  weights.rs
