[package]
name = "mrtree-rs"
version = "0.1.0"
edition = "2024"
description = "A Rust implementation of the MRtree algorithm for reconciling clustering labels from multiple resolutions into a consistent cluster hierarchy"
readme = "README.md"
homepage = "https://github.com/apcamargo/mrtree-rs"
repository = "https://github.com/apcamargo/mrtree-rs"
license = "GPL-3.0-only"

[lib]
name = "mrtree"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
csv = "1.4.0"
faer = "0.24.0"
float-cmp = "0.10.0"
indexmap = "2.13.1"
linfa = "0.8.1"
linfa-clustering = "0.8.1"
ndarray = "0.16.1"
rand = "0.8.5"
rand_xoshiro = "0.6.0"
rayon = "1.11.0"
thiserror = "2.0.18"
time = { version = "0.3.47", features = [
  "formatting",
  "local-offset",
  "parsing"
] }

[lints.clippy]
all = "warn"
pedantic = "warn"

[lints.rust]
unsafe_code = "warn"
