[package]
name = "mrtree-rs"
version = "0.2.0"
edition = "2024"
description = "A Rust implementation of the MRtree algorithm for reconciling clustering labels from multiple resolutions into a consistent cluster hierarchy"
readme = "README.md"
homepage = "https://github.com/apcamargo/mrtree-rs"
repository = "https://github.com/apcamargo/mrtree-rs"
license = "GPL-3.0-only"

[lib]
name = "mrtree"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive", "wrap_help"] }
csv = "1.4.0"
faer = "0.24.0"
float-cmp = "0.10.0"
indexmap = "2.13.1"
linfa = "0.8.1"
linfa-clustering = "0.8.1"
ndarray = "0.16.1"
nu-ansi-term = "0.50.3"
rand = "0.8.5"
rand_xoshiro = "0.6.0"
rayon = "1.11.0"
thiserror = "2.0.18"
time = { version = "0.3.47", features = ["local-offset"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", default-features = false, features = [
  "ansi",
  "fmt",
  "std"
] }

[lints.clippy]
all = "warn"
pedantic = "warn"

[lints.rust]
unsafe_code = "warn"
